<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridViewItemDragDemo</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的事项</string>
    <string name="subscribe_more_category">更多事项</string>
    <string name="subscribe_study_category">学习</string>
    <string name="subscribe_work_category">工作</string>
    <string name="subscribe_entertainment_category">娱乐</string>
    <string name="subscribe_sport_category">运动</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
</resources>
