<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root_view"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/subscribe_activity_bg">

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:id="@+id/subscribe_main_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/subscribe_bg"
                android:orientation="vertical"
                android:paddingBottom="14.0dip">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/my_category_text"
                        style="@style/subscribe_my_tip_text"
                        android:text="@string/subscribe_my_category"/>

                <TextView
                        android:id="@+id/my_category_tip_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12.0dip"
                        android:text="@string/subscribe_manager_category_info_2"
                        android:textColor="@color/subscribe_tip_text"
                        android:textSize="12sp"/>
            </LinearLayout>

            <View
                    android:id="@+id/seperate_line"
                    style="@style/subscribe_seperate_line"/>

            <com.aboo.gridviewitemdragdemo.app.DragGrid
                    android:id="@+id/userGridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dip"
                    android:layout_marginRight="14dip"
                    android:padding="4dp"
                    android:gravity="center"
                    android:horizontalSpacing="14dip"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="14.0px"/>

            <View
                    android:id="@+id/seperate_line2"
                    style="@style/subscribe_seperate_line"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                <TextView
                        style="@style/subscribe_my_tip_text"
                        android:text="@string/subscribe_more_category"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="@string/subscribe_manager_category_info"
                        android:textColor="@color/subscribe_tip_text"
                        android:textSize="12sp"/>
            </LinearLayout>

            <TextView
                    android:id="@+id/more_category_text"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="left|center_vertical"
                    android:background="#ffa7ffb9"
                    android:paddingLeft="8dp"
                    android:text="@string/subscribe_study_category"/>

            <com.aboo.gridviewitemdragdemo.app.OtherGridView
                    android:id="@+id/otherGridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dip"
                    android:layout_marginRight="14dip"
                    android:padding="4dp"
                    android:gravity="center"
                    android:horizontalSpacing="14dip"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="14.0px"/>

            <TextView
                    android:id="@+id/work_category_text"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="left|center_vertical"
                    android:background="#ffa7ffb9"
                    android:paddingLeft="8dp"
                    android:text="@string/subscribe_work_category"/>

            <com.aboo.gridviewitemdragdemo.app.OtherGridView
                    android:id="@+id/workGridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dip"
                    android:layout_marginRight="14dip"
                    android:padding="4dp"
                    android:gravity="center"
                    android:horizontalSpacing="14dip"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="14.0px"/>

            <TextView
                    android:id="@+id/entertainment_category_text"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="left|center_vertical"
                    android:background="#ffa7ffb9"
                    android:paddingLeft="8dp"
                    android:text="@string/subscribe_entertainment_category"/>

            <com.aboo.gridviewitemdragdemo.app.OtherGridView
                    android:id="@+id/entertainmentGridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dip"
                    android:layout_marginRight="14dip"
                    android:padding="4dp"
                    android:gravity="center"
                    android:horizontalSpacing="14dip"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="14.0px"/>

            <TextView
                    android:id="@+id/sport_category_text"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="left|center_vertical"
                    android:background="#ffa7ffb9"
                    android:paddingLeft="8dp"
                    android:text="@string/subscribe_sport_category"/>

            <com.aboo.gridviewitemdragdemo.app.OtherGridView
                    android:id="@+id/sportGridView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dip"
                    android:layout_marginRight="14dip"
                    android:padding="4dp"
                    android:gravity="center"
                    android:horizontalSpacing="14dip"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="4"
                    android:scrollbars="vertical"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="14.0px"/>


        </LinearLayout>
    </ScrollView>

    <include
            android:id="@+id/category_layout"
            layout="@layout/channel_item"
            android:visibility="gone"/>

</RelativeLayout>